--- a/data-psychology.html
+++ b/data-psychology.html
@@ -65,7 +65,7 @@
     </div>
     <div
       class="sample-header"
-      style="background-image: url('../../images/b3.jpg')"
+      style="background-image: url('images/b3.jpg')"
     >
       <div class="sample-header-section text-center">
         <h1 class="display-3">Data Psychology</h1>
@@ -111,7 +111,7 @@
               </p>
             </div>
             <div class="col-lg-6 col-sm-12">
-              <img class="image-fluid" src="/images/qq.jpg" alt="" />
+              <img class="image-fluid" src="images/qq.jpg" alt="" />
             </div>
           </div>
           <div class="service-display-list">
