--- a/partners.html
+++ b/partners.html
@@ -63,7 +63,7 @@
     </div>
     <div
       class="sample-header"
-      style="background-image: url('../../images/rr.jpg')"
+      style="background-image: url('images/rr.jpg')"
     >
       <div class="sample-header-section text-center">
         <h1 class="display-3">Partners</h1>
