--- a/software-development.html
+++ b/software-development.html
@@ -63,7 +63,7 @@
     </div>
     <div
       class="sample-header"
-      style="background-image: url('../../images/b6.jpg')"
+      style="background-image: url('images/b6.jpg')"
     >
       <div class="sample-header-section text-center">
         <h1 class="display-3">Software Development</h1>
@@ -109,7 +109,7 @@
               </p>
             </div>
             <div class="col-lg-6 col-sm-12">
-              <img class="image-fluid" src="/images/qq.jpg" alt="" />
+              <img class="image-fluid" src="images/qq.jpg" alt="" />
             </div>
           </div>
           <div class="service-display-list">
