--- a/webinars.html
+++ b/webinars.html
@@ -61,10 +61,7 @@
       <input type="checkbox" class="toggler" />
       <div class="hamburger"><div></div></div>
     </div>
-    <div
-      class="sample-header"
-      style="background-image: url('../../images/bg-1.jpg')"
-    >
+    <div class="sample-header" style="background-image: url('images/bg-1.jpg')">
       <div class="sample-header-section text-center">
         <h1 class="display-3">Webinars</h1>
         <div class="crumbs">
@@ -91,7 +88,7 @@
               <figure>
                 <div
                   class="media"
-                  style="background-image: url(../../images/webinar1.jpg)"
+                  style="background-image: url(images/webinar1.jpg)"
                 ></div>
                 <figcaption>
                   <svg
@@ -185,7 +182,7 @@
       class="it-nw-footer-section position-relative"
       data-background="images/f-bg.jpg"
     >
-      <div class="it-nw-newslatter-area">
+      <div class="it-nw-newslatter-area" style="margin-left: 12%">
         <div class="container">
           <div
             class="it-nw-newslatter-content headline d-flex align-items-center justify-content-between"
@@ -209,7 +206,7 @@
         </div>
       </div>
       <div class="it-nw-fooer-widget-wrapper">
-        <div class="container">
+        <div class="container margin-left">
           <div class="it-nw-fooer-widget-area">
             <div class="row">
               <div class="col-lg-3 col-md-6">
@@ -234,11 +231,17 @@
                   <div class="it-nw-fooer-menu">
                     <h3 class="widget-title">Quick link</h3>
                     <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">Services</a></li>
-                      <li><a href="#">About us</a></li>
-                      <li><a href="#">Testimonials</a></li>
-                      <li><a href="#">News</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li>
+                        <a href="index.html#it-nw-services">Services</a>
+                      </li>
+                      <li>
+                        <a href="index.html#it-nw-about">About us</a>
+                      </li>
+                      <li>
+                        <a href="index.html#it-nw-testimonial">Testimonials</a>
+                      </li>
+                      <li><a href="news.html">News</a></li>
                     </ul>
                   </div>
                 </div>
@@ -250,11 +253,23 @@
                   <div class="it-nw-fooer-menu">
                     <h3 class="widget-title">Services</h3>
                     <ul>
-                      <li><a href="#">Data Psychology</a></li>
-                      <li><a href="#">Data Engineering</a></li>
-                      <li><a href="#">Data Science</a></li>
-                      <li><a href="#">BI & Analytics</a></li>
-                      <li><a href="#">Software Development</a></li>
+                      <li>
+                        <a href="data-psychology.html">Data Psychology</a>
+                      </li>
+                      <li>
+                        <a href="data-engineering.html">Data Engineering</a>
+                      </li>
+                      <li>
+                        <a href="data-science.html">Data Science</a>
+                      </li>
+                      <li>
+                        <a href="bi-analytics.html">BI & Analytics</a>
+                      </li>
+                      <li>
+                        <a href="software-development.html"
+                          >Software Development</a
+                        >
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -288,7 +303,7 @@
           </div>
         </div>
       </div>
-      <div class="it-nw-fooer-copyright">
+      <div class="it-nw-fooer-copyright margin-left">
         <div class="container">
           <div
             class="it-nw-copyright-wrap pera-content d-flex justify-content-between align-items-center"
