--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                 data-wow-delay="200ms"
                 data-wow-duration="1500ms"
               >
-                <a class="btn btn-secondary" href="/case-studies.html">
+                <a class="btn btn-secondary" href="case-studies.html">
                   All Case Studies
                 </a>
               </div>
