--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="it-nw-dot-bg text-center position-absolute">
               <img src="assets/img/its-2/dot.png" alt="" />
             </div>
-            <div class="container">
+            <div class="container margin-left">
               <div class="row">
                 <div
                   class="col-lg-6 wow fadeInRight"
