--- a/case-studies.html
+++ b/case-studies.html
@@ -71,7 +71,7 @@
           <nav aria-label="breadcrumb" class="breadcrumb-items">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a routerlink="/home" href="/index.html">Home</a>
+                <a routerlink="/home" href="index.html">Home</a>
               </li>
               <li class="breadcrumb-item">
                 <a routerlink="/summary" href="#">Success Stories</a>
@@ -157,7 +157,11 @@
                     Accusantium maiores, nesciunt eos dolorem neque voluptate.
                     Quibusdam itaque non illum.
                   </p>
-                  <div class="btn btn-sm btn-outline-light">Read More</div>
+                  <a
+                    href="case-study-detail.html"
+                    class="btn btn-sm btn-outline-light"
+                    >Read More</a
+                  >
                 </div>
               </div>
             </div>
@@ -176,7 +180,11 @@
                     Accusantium maiores, nesciunt eos dolorem neque voluptate.
                     Quibusdam itaque non illum.
                   </p>
-                  <div class="btn btn-sm btn-outline-light">Read More</div>
+                  <a
+                    href="case-study-detail.html"
+                    class="btn btn-sm btn-outline-light"
+                    >Read More</a
+                  >
                 </div>
               </div>
             </div>
@@ -197,7 +205,11 @@
                     Accusantium maiores, nesciunt eos dolorem neque voluptate.
                     Quibusdam itaque non illum.
                   </p>
-                  <div class="btn btn-sm btn-outline-light">Read More</div>
+                  <a
+                    href="case-study-detail.html"
+                    class="btn btn-sm btn-outline-light"
+                    >Read More</a
+                  >
                 </div>
               </div>
             </div>
@@ -216,7 +228,11 @@
                     Accusantium maiores, nesciunt eos dolorem neque voluptate.
                     Quibusdam itaque non illum.
                   </p>
-                  <div class="btn btn-sm btn-outline-light">Read More</div>
+                  <a
+                    href="case-study-detail.html"
+                    class="btn btn-sm btn-outline-light"
+                    >Read More</a
+                  >
                 </div>
               </div>
             </div>
@@ -237,7 +253,11 @@
                     Accusantium maiores, nesciunt eos dolorem neque voluptate.
                     Quibusdam itaque non illum.
                   </p>
-                  <div class="btn btn-sm btn-outline-light">Read More</div>
+                  <a
+                    href="case-study-detail.html"
+                    class="btn btn-sm btn-outline-light"
+                    >Read More</a
+                  >
                 </div>
               </div>
             </div>
@@ -251,7 +271,7 @@
       class="it-nw-footer-section position-relative"
       data-background="images/f-bg.jpg"
     >
-      <div class="it-nw-newslatter-area" style="margin-left: 12%">
+      <div class="it-nw-newslatter-area">
         <div class="container">
           <div
             class="it-nw-newslatter-content headline d-flex align-items-center justify-content-between"
@@ -275,7 +295,7 @@
         </div>
       </div>
       <div class="it-nw-fooer-widget-wrapper">
-        <div class="container margin-left">
+        <div class="container">
           <div class="it-nw-fooer-widget-area">
             <div class="row">
               <div class="col-lg-3 col-md-6">
@@ -372,7 +392,7 @@
           </div>
         </div>
       </div>
-      <div class="it-nw-fooer-copyright margin-left">
+      <div class="it-nw-fooer-copyright">
         <div class="container">
           <div
             class="it-nw-copyright-wrap pera-content d-flex justify-content-between align-items-center"
