--- a/case-study-detail.html
+++ b/case-study-detail.html
@@ -72,7 +72,7 @@
           <nav aria-label="breadcrumb" class="breadcrumb-items">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a routerlink="/home" href="/index.html">Home</a>
+                <a routerlink="/home" href="index.html">Home</a>
               </li>
               <li class="breadcrumb-item">
                 <a routerlink="/summary" href="#">Success Stories</a>
@@ -422,7 +422,7 @@
             class="it-nw-footer-section position-relative"
             data-background="images/f-bg.jpg"
           >
-            <div class="it-nw-newslatter-area" style="margin-left: 12%">
+            <div class="it-nw-newslatter-area"">
               <div class="container">
                 <div
                   class="it-nw-newslatter-content headline d-flex align-items-center justify-content-between"
