--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
                 </div>
               </div>
               <div
-                class="it-nw-btn text-center text-center wow flipInX pb-5"
+                class="it-nw-btn text-center text-center wow flipInX ml-5 pb-5"
                 data-wow-delay="200ms"
                 data-wow-duration="1500ms"
               >
@@ -1387,7 +1387,7 @@
             class="it-nw-footer-section position-relative"
             data-background="images/f-bg.jpg"
           >
-            <div class="it-nw-newslatter-area" style="margin-left: 12%">
+            <div class="it-nw-newslatter-area margin-12">
               <div class="container">
                 <div
                   class="it-nw-newslatter-content headline d-flex align-items-center justify-content-between"
