--- a/life-at-techvantage.html
+++ b/life-at-techvantage.html
@@ -71,7 +71,7 @@
           <nav aria-label="breadcrumb" class="breadcrumb-items">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a routerlink="/home" href="/index.html">Home</a>
+                <a routerlink="/home" href="index.html">Home</a>
               </li>
               <li class="breadcrumb-item">
                 <a routerlink="/summary" href="#">Life at Techvantage</a>
@@ -441,7 +441,7 @@
       class="it-nw-footer-section position-relative"
       data-background="images/f-bg.jpg"
     >
-      <div class="it-nw-newslatter-area" style="margin-left: 12%">
+      <div class="it-nw-newslatter-area"">
         <div class="container">
           <div
             class="it-nw-newslatter-content headline d-flex align-items-center justify-content-between"
@@ -465,7 +465,7 @@
         </div>
       </div>
       <div class="it-nw-fooer-widget-wrapper">
-        <div class="container margin-left">
+        <div class="container">
           <div class="it-nw-fooer-widget-area">
             <div class="row">
               <div class="col-lg-3 col-md-6">
@@ -562,7 +562,7 @@
           </div>
         </div>
       </div>
-      <div class="it-nw-fooer-copyright margin-left">
+      <div class="it-nw-fooer-copyright">
         <div class="container">
           <div
             class="it-nw-copyright-wrap pera-content d-flex justify-content-between align-items-center"
